--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://AnXing233.github.io/'
 languageCode = 'zh-Hans'
 title = '我的新Hugo网站'
 theme = 'ananke'
